--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "02-Todo-List": {
+    "02-todo-list": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -60,10 +60,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "02-Todo-List:build:production"
+              "browserTarget": "02-todo-list:build:production"
             },
             "development": {
-              "browserTarget": "02-Todo-List:build:development"
+              "browserTarget": "02-todo-list:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -71,7 +71,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "02-Todo-List:build"
+            "browserTarget": "02-todo-list:build"
           }
         },
         "test": {
@@ -96,6 +96,6 @@
     }
   },
   "cli": {
-    "analytics": "fe5091ef-35fa-4337-8e65-05cd84246ce1"
+    "analytics": false
   }
 }
